--- a/eas.json
+++ b/eas.json
@@ -5,13 +5,7 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "android": {
-        "image": "latest"
-      },
-      "ios": {
-        "image": "latest"
-      }
+      "distribution": "internal"
     },
     "preview": {
       "distribution": "internal"
