--- a/eas.json
+++ b/eas.json
@@ -3,16 +3,13 @@
     "version": ">= 7.6.1"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {}
-  },
-  "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "image": "default"
+      },
+      "ios": {
+        "image": "default"
+      }
+    }
   }
 }
