--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,9 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "image": "default"
+    }
   },
   "submit": {
     "production": {}
