--- a/eas.json
+++ b/eas.json
@@ -10,9 +10,7 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {
-      "image": "default"
-    }
+    "production": {}
   },
   "submit": {
     "production": {}
