--- a/eas.json
+++ b/eas.json
@@ -5,15 +5,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "image": "latest"
+      "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "image": "latest"
+      "distribution": "internal"
     },
     "production": {
-      "image": "latest"
+      "distribution": "internal",
+      "github": {
+        "image": "latest"
+      }
     }
   },
   "submit": {
