--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,10 @@
       "distribution": "internal"
     },
     "production": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "github": {
+        "image": "latest"
+      }
     }
   },
   "submit": {
