--- a/eas.json
+++ b/eas.json
@@ -18,13 +18,6 @@
     }}
   },
   "submit": {
-    "production": {
-      "android": {
-        "image": "latest"
-      },
-      "ios": {
-        "image": "latest"
-      }
-    }
+    "production": {}
   }
 }
